--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -34,18 +34,20 @@
 
     </style>
     <body>
-        <div class = "container">
-        <h1>Register</h1>
-        <p>Please, fill the form for registration</p>
-        <label for ="username"><b>UserName</b></label>
-        <p>  </p>
-        <input type = "text" placeholder="Enter user name" name = "username" required>
-        <p>    </p>
-        <label for ="pswd"><b>Password</b></label>
-        <p>  </p>
-        <input type = "password" placeholder="Enter Password" name="pswd" required>
-        <p>     </p>
-        <button type = "submit" class = "registerbtn">Register</button>
-        </div>
+        <form action="http://127.0.0.1:5000/register">
+            <div class = "container">
+            <h1>Register</h1>
+            <p>Please, fill the form for registration</p>
+            <label for ="username"><b>UserName</b></label>
+            <p>  </p>
+            <input type = "text" placeholder="Enter user name" name = "username" required>
+            <p>    </p>
+            <label for ="pswd"><b>Password</b></label>
+            <p>  </p>
+            <input type = "password" placeholder="Enter Password" name="pswd" required>
+            <p>     </p>
+            <button type = "submit" class = "registerbtn">Register</button>
+            </div>
+        </form>
     </body>
 </html>
