task3: Submit Registration form data to the Flask app

--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -34,7 +34,7 @@
 
     </style>
     <body>
-        <form action="http://127.0.0.1:5000/register">
+        <form action="http://127.0.0.1:5000/register" method="POST">
             <div class = "container">
             <h1>Register</h1>
             <p>Please, fill the form for registration</p>
