--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -1,39 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+        <link rel="stylesheet" href="style.css">
         <title>Registration</title>
     </head>
-    <style>
-        body{
-            background-color: powderblue;
-            font-size: larger;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
-        .container{
-            padding: 15px;
-            /* background-color: azure; */
-        }
-        input[type = text],
-        input[type=password] {
-            width:auto;
-            height: 10%;
-            padding: 15px;
-            margin: 5px 0 22px 0;
-            display: inline-block;
-            background: #f1f1f1;
-        }
-        .registerbtn {
-            background-color: green;
-            color: white;
-            padding: 16px 20px;
-            margin: 8px 0;
-            cursor:pointer;
-            width: auto;
-            opacity: 0.9;
-        }
-
-    </style>
-    <body>
+    <body style ="background-color:azure;">
         <form action="http://127.0.0.1:5000/register" method="POST">
             <div class = "container">
             <h1>Register</h1>
