--- a/templates/result.html
+++ b/templates/result.html
@@ -1,15 +1,12 @@
 <!doctype html>
 <html>
    <body>
-      <table border = 1>
          {% for key, value in result.items() %}
             <tr>
                 {% if key == "username" %}
-               <th> {{ key }} </th>
-               <td> {{ value }} </td>
+               <p> {{value}} registered successfully.</p>
                {% endif %}
             </tr>
          {% endfor %}
-      </table>
    </body>
 </html>
