--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -5,6 +5,10 @@
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
         <title>Registration</title>
     </head>
     <body style ="background-color:azure;">
@@ -23,5 +27,22 @@
             <button type = "submit" class = "registerbtn">Register</button>
             </div>
         </form>
+        {% if msg1 %}
+            <div class = "container" style="text-align: center;">
+            <div class="alert alert-success alert-dismissible">
+            <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            {{msg1}}
+            </div>
+            </div>
+            </br>
+        {%endif%}
+        {% if msg %}
+            <div class = "container" style="text-align: center;">
+            <div class="alert alert-danger alert-dismissible">
+            <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            {{msg}}
+            </div>
+            </div>
+        {%endif%}
     </body>
 </html>
