--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -25,6 +25,8 @@
             <input type = "password" placeholder="Enter Password" name="pswd" required>
             <p>     </p>
             <button type = "submit" class = "registerbtn">Register</button>
+            <button type = "submit" class = "registerbtn">Login</button>
+            
             </div>
         </form>
         {% if msg1 %}
