updated with logout route

--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -25,7 +25,7 @@
             <input type = "password" placeholder="Enter Password" name="pswd" required>
             <p>     </p>
             <button type = "submit" class = "registerbtn">Register</button>
-            <button type = "submit" class = "registerbtn">Login</button>
+            <button type = "submit" class = "registerbtn" formaction="/auth">Login</button>
             
             </div>
         </form>
