--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -10,24 +10,55 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
         <title>Registration</title>
+        <script type = "text/javascript">
+            function checkPassword(str)
+              {
+              var validpwd = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}$/;
+              return validpwd.test(str);
+              }
+            
+              function checkForm(form)
+              {
+                if(form.username.value == "") {
+                  document.getElementById("textdisplay").innerHTML="Error: Username cannot be blank!";
+                  return false;
+                }
+                else {
+                  if(form.pswd.value != "") {
+                    if(!checkPassword(form.pswd.value)) {
+                      document.getElementById("textdisplay").innerHTML="The password should have at least 6 characters, with at least one uppercase letter, one lowercase letter, one number and a symbol.";
+                    return false;
+                    }
+                  }
+                  else {
+                    document.getElementById("textdisplay").innerHTML="Error: Password cannot be blank!";
+                    return false;
+                  }
+                } 
+                return true;
+              }
+             </script>
+            
     </head>
     <body style ="background-color:azure;">
-        <form action="http://127.0.0.1:5000/register" method="POST">
+        <form action="/register" method="POST" onsubmit="return checkForm(this);">
             <div class = "container">
             <h1>Register</h1>
             <p>Please, fill the form for registration</p>
             <label for ="username"><b>UserName</b></label>
-            <p>  </p>
-            <input type = "text" placeholder="Enter user name" name = "username" required>
+            <br>
+            <input type = "text" placeholder="Enter user name" name = "username" >
             <p>    </p>
             <label for ="pswd"><b>Password</b></label>
             <p>  </p>
-            <input type = "password" placeholder="Enter Password" name="pswd" required>
+            <input type = "password" placeholder="Enter Password" name="pswd">
             <p>     </p>
             <button type = "submit" class = "registerbtn">Register</button>
             <button type = "submit" class = "registerbtn" formaction="/auth">Login</button>
             
             </div>
+            <p style="text-align: center; color: black;" id = "textdisplay"></p>
+
         </form>
         {% if msg1 %}
             <div class = "container" style="text-align: center;">
